--- a/src/views/store/product.ejs
+++ b/src/views/store/product.ejs
@@ -126,8 +126,7 @@
 											<%= producto.descuento %>,
 											<%= stockColor || producto.stock %>,
 											foto
-										);
-										" ><i class="fa fa-shopping-cart">
+										);" ><i class="fa fa-shopping-cart">
 									</i> Agregar al carrito</button>
 								</div>
 							</div>
