--- a/src/views/store/about.ejs
+++ b/src/views/store/about.ejs
@@ -71,7 +71,7 @@
         <!-- Encabezado -->
         <div class="fila text-center pt-5 pb-3">
             <div class="columna-lg-6 m-auto">
-                <h1 class="titulo">Sobre nuestra empresa<img class="lavega" src="/img/lavegatech-logo.png" alt="La Vega Tech"></h1>
+                <h1 class="titulo">Sobre nuestra empresa</h1>
                 <p class="parrafo">
                     <img class="lavega" src="/img/lavegatech-logo.png" alt="La Vega Tech"> es la tienda líder en tecnología, con productos de calidad 
                     y un excelente servicio al cliente. Llevamos años sirviendo a la comunidad de <strong>La Vega</strong> con lo último en dispositivos electrónicos.
