--- a/src/views/store/store.ejs
+++ b/src/views/store/store.ejs
@@ -194,8 +194,7 @@
 									<div class="col-md-4 col-xs-6">
 										<div class="product">
 											<div class="product-img"> <a href="/mobiles/product/<%= producto.id %>?color=<%= producto.color %>">
-			    								<img src="<%= producto.imagen %>"
-												alt="<%= producto.nombre %>" >
+			    								<img src="<%= producto.imagen %>" alt="<%= producto.nombre %>" >
 												<div class="product-label">
 													<% if (producto.descuento> 0) { %>
 														<span class="sale">-<%= producto.descuento %>%</span>
