Inicio de sesion y registro de usuarios

--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -67,7 +67,17 @@
             </ul>
             <ul class="header-links pull-right">
                 <li><a href="#"><i class="fa fa-dollar"></i>RD</a></li>
-                <li><a href="/login"><i class="fa fa-user-o"></i>Mi Cuenta</a></li>
+                <% if (user) { %>
+                    <li><a href="/profile"><i class="fa fa-user-o"></i>Mi Perfil</a></li>
+                    <li>
+                        <form id="logout-form" action="/logout" method="POST" style="display: none;"></form>
+                        <a href="#" onclick="document.getElementById('logout-form').submit();">
+                            <i class="fa fa-sign-out"></i> Cerrar Sesión
+                        </a>
+                    </li>
+                    <% } else { %>
+                    <li><a href="/login"><i class="fa fa-user-o"></i>Mi Cuenta</a></li>
+                <% } %>
             </ul>
         </div>
     </div>
