--- a/src/views/login/login.ejs
+++ b/src/views/login/login.ejs
@@ -21,6 +21,8 @@
 
     <p>¿No tienes una cuenta? <a href="/register">Regístrate</a></p>
 
+    <p><a href="/email">¿Haz olvidado la contraseña? </a></p>
+
     <!-- Mostrar errores si existen -->
     <% if (error) { %>
         <p style="color:red;"><%= error %></p>
