--- a/src/views/login/register.ejs
+++ b/src/views/login/register.ejs
@@ -16,6 +16,9 @@
 
     <label>Contraseña:</label><br>
     <input type="password" name="password" required><br><br>
+    
+    <label>Confirmar contraseña:</label><br>
+    <input type="password" name="confirmPassword" required><br><br>
 
     <button type="submit">Registrarse</button>
   </form>
