--- a/src/views/store/contact.ejs
+++ b/src/views/store/contact.ejs
@@ -39,7 +39,7 @@
 
 <div class="input-principal">
     <div class="fila-formulario">
-        <form class="formulario-contacto" method="post" role="form">
+        <form class="formulario-contacto" method="post" action="/api/auth/contact" role="form">
             <div class="fila-campos">
                 <div class="campo-formulario">
                     <label for="nombre">Nombre</label>
