Uso de zod para validaciones

--- a/src/views/login/forgotPass/email.ejs
+++ b/src/views/login/forgotPass/email.ejs
@@ -9,7 +9,7 @@
     <h2>Ayuda con la contraseña</h2>
 <p>Escribe la dirección de correo electrónico asociada a tu cuenta.</p>
 
-<form method="POST" action="/api/auth/forgotPassword">
+<form method="POST" action="/api/auth/email">
   <input type="email" name="email" placeholder="Correo electrónico" required>
   <button type="submit">Continuar</button>
 </form>
