Guardar las sesiones en la db

--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -67,7 +67,7 @@
             </ul>
             <ul class="header-links pull-right">
                 <li><a href="#"><i class="fa fa-dollar"></i>RD</a></li>
-                <% if (user) { %>
+                <% if (usuario) { %>
                     <li><a href="/profile"><i class="fa fa-user-o"></i>Mi Perfil</a></li>
                     <li>
                         <form id="logout-form" action="/logout" method="POST" style="display: none;"></form>
