--- a/src/views/login/forgotPass/email.ejs
+++ b/src/views/login/forgotPass/email.ejs
@@ -1,19 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>LaVegaTech</title>
+  <link rel="icon" type="image/png" href="/img/lavegatech-logo.png">
+  <link type="text/css" rel="stylesheet" href="/css/login.css" />
+
 </head>
 <body>
+
+  <div class="logo-container">
+    <a href="/" class="logo"><img src="/img/lavegatech-logo.png" alt=""></a>
+</div>
+
+  <div class="login-container">
     <h2>Ayuda con la contraseña</h2>
-<p>Escribe la dirección de correo electrónico asociada a tu cuenta.</p>
+    <p>Escribe la dirección de correo electrónico asociada a tu cuenta.</p>
 
-<form method="POST" action="/api/auth/email">
-  <input type="email" name="email" placeholder="Correo electrónico" required>
-  <button type="submit">Continuar</button>
-</form>
+    <form method="POST" action="/api/auth/email">
+      <input type="email" name="email" placeholder="Correo electrónico" required>
+      <button type="submit">Continuar</button>
+    </form>
+  </div>
 
-<% if (error) { %><p style="color:red"><%= error %></p><% } %>
+  <% if (error) { %>
+    <p style="color:red"><%= error %></p>
+    <% } %>
+
 </body>
 </html>
