--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -68,6 +68,7 @@
             <ul class="header-links pull-right">
                 <li><a href="#"><i class="fa fa-dollar"></i>RD</a></li>
                 <% if (usuario) { %>
+                    console.log("hola")
                     <li><a href="/profile"><i class="fa fa-user-o"></i>Mi Perfil</a></li>
                     <li>
                         <form id="logout-form" action="/logout" method="POST" style="display: none;"></form>
