--- a/src/views/login/forgotPass/newpass.ejs
+++ b/src/views/login/forgotPass/newpass.ejs
@@ -1,22 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>LaVegaTech</title>
+  <link rel="icon" type="image/png" href="/img/lavegatech-logo.png">  
+  <link type="text/css" rel="stylesheet" href="/css/login.css" />
 </head>
 <body>
-    <h2>Crear nueva contraseña</h2>
-<p>Solicitaremos esta contraseña cada vez que inicies sesión.</p>
 
-<form method="POST" action="/api/auth/newPassword">
-  <input type="hidden" name="email" value="<%= email %>">
-  <input type="password" name="password" placeholder="Nueva contraseña" required>
-  <input type="password" name="confirm" placeholder="Vuelve a escribir la contraseña" required>
-  <button type="submit">Guardar contraseña</button>
-</form>
+  <div class="logo-container">
+    <a href="/" class="logo"><img src="/img/lavegatech-logo.png" alt=""></a>
+  </div>
 
-<% if (error) { %><p style="color:red"><%= error %></p><% } %>
+  <div class="login-container">
+  <h2>Crear nueva contraseña</h2>
+  <p>Solicitaremos esta contraseña cada vez que inicies sesión.</p>
+
+  <form method="POST" action="/api/auth/newPassword">
+    <input type="hidden" name="email" value="<%= email %>">
+    <input type="password" name="password" placeholder="Nueva contraseña" required>
+    <input type="password" name="confirm" placeholder="Vuelve a escribir la contraseña" required>
+    <button type="submit">Guardar contraseña</button>
+  </form>
+</div>
+
+  <% if (error) { %>
+    <p style="color:red"><%= error %></p>
+    <% } %>
 
 </body>
 </html>
