--- a/src/views/login/login.ejs
+++ b/src/views/login/login.ejs
@@ -3,29 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Iniciar sesión - Tu Tienda</title>
+    <title>LaVegaTech</title>
+    <link rel="icon" type="image/png" href="/img/lavegatech-logo.png">    
+    <link type="text/css" rel="stylesheet" href="/css/login.css" />
 </head>
 <body>
+
+    <script>
+        function myFunction() {
+          var x = document.getElementById("myInput");
+          if (x.type === "password") {
+            x.type = "text";
+          } else {
+            x.type = "password";
+          }
+        }
+    </script>   
+        
+    <div class="logo-container">
+        <a href="/" class="logo"><img src="/img/lavegatech-logo.png" alt=""></a>
+    </div>
+
+    <div class="login-container">
     <h2>Iniciar sesión</h2>
-
-    <!-- Formulario para iniciar sesión -->
+    
     <form action="/api/auth/login" method="POST">
-        <label for="email">Correo electrónico:</label><br>
-        <input type="email" name="email" value="<%= email || '' %>" required><br><br>
+        <label for="email">Correo electrónico:</label>
+        <input type="email" name="email" value="<%= email || '' %>" required>
 
-        <label for="password">Contraseña:</label><br>
-        <input type="password" name="password" required><br><br>
-
+        <label for="password">Contraseña:</label>
+        <input type="password" name="password" id="myInput" required>
+        <div><p><input class="show" type="checkbox" onclick="myFunction()">Ver Contraseña</p></div>
+       
         <button type="submit">Entrar</button>
     </form>
 
-    <p>¿No tienes una cuenta? <a href="/register">Regístrate</a></p>
+    <div class="links">
+        <p>¿No tienes una cuenta? <a href="/register">Regístrate</a>
+        <p><a href="/email">¿Has olvidado la contraseña?</a>
+    </div>
 
-    <p><a href="/email">¿Haz olvidado la contraseña? </a></p>
-
-    <!-- Mostrar errores si existen -->
     <% if (error) { %>
         <p style="color:red;"><%= error %></p>
     <% } %>
+
 </body>
 </html>
