--- a/src/views/login/verify.ejs
+++ b/src/views/login/verify.ejs
@@ -1,27 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>LaVegaTech</title>
+  <link rel="icon" type="image/png" href="/img/lavegatech-logo.png">  
+  <link type="text/css" rel="stylesheet" href="/css/login.css" />
 </head>
+
 <body>
-    <h2>Verifica tu correo</h2>
-<p>Hemos enviado un código a tu correo.</p>
-<form method="POST" action="/api/auth/verifyCode">
-  <input type="hidden" name="email" value="<%= email %>">
-  <input type="hidden" name="type" value="verify"> 
-  <input type="text" name="code" placeholder="Código de verificación" required>
-  <button type="submit">Verificar</button>
-</form>
 
-<form method="POST" action="/api/auth/resendCode">
-  <input type="hidden" name="email" value="<%= email %>">
-  <input type="hidden" name="type" value="verify">
-  <button type="submit">Reenviar código</button>
-</form>
+  <div class="logo-container">
+    <a href="/" class="logo"><img src="/img/lavegatech-logo.png" alt=""></a>
+</div>
 
-<% if (error) { %><p style="color:red"><%= error %></p><% } %>
+  <div class="login-container">
+  <h2>Verifica tu correo</h2>
+
+  <p class="text">Hemos enviado un código a tu correo.</p>
+
+  <form method="POST" action="/api/auth/verifyCode">
+    <input type="hidden" name="email" value="<%= email %>">
+    <input type="hidden" name="type" value="verify">
+    <input type="text" name="code" placeholder="Código de verificación" required>
+    <button type="submit">Verificar</button>
+  </form>
+
+  <form method="POST" action="/api/auth/resendCode">
+    <input type="hidden" name="email" value="<%= email %>">
+    <input type="hidden" name="type" value="verify">
+    <button type="submit">Reenviar código</button>
+  </form>
+</div>
+    
+  <% if (error) { %>
+    <p style="color:red"><%= error %></p>
+  <% } %>
 
 </body>
+
 </html>
